--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "dd-tappable",
-  "version": "0.0.1",
+  "version": "0.0.2",
   "description": "Trigger dom event by user interaction.",
   "main": "index.js",
   "scripts": {
@@ -18,11 +18,18 @@
   "author": "dadajam4",
   "license": "MIT",
   "devDependencies": {
+    "babel": "^6.23.0",
+    "babel-cli": "^6.24.1",
     "babel-core": "^6.25.0",
     "babel-loader": "^7.1.1",
+    "babel-plugin-transform-es2015-modules-umd": "^6.24.1",
+    "babel-plugin-transform-es3-member-expression-literals": "^6.22.0",
+    "babel-plugin-transform-es3-property-literals": "^6.22.0",
     "babel-preset-es2015": "^6.24.1",
     "console-polyfill": "^0.3.0",
     "css-loader": "^0.28.4",
+    "npm-run-all": "^4.0.2",
+    "uglify-js": "^3.0.26",
     "vue": "^2.3.4",
     "vue-loader": "^13.0.0",
     "vue-template-compiler": "^2.3.4",
